--- a/ServiceLayer/ServiceLayer.csproj
+++ b/ServiceLayer/ServiceLayer.csproj
@@ -52,14 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="Interfaces\IAttributesRepo.cs" />
-    <Compile Include="Interfaces\IAttributeValuesRepo.cs" />
-    <Compile Include="Interfaces\ICategoriesRepo.cs" />
-    <Compile Include="Interfaces\IGenericRepo.cs" />
+    <Compile Include="Interfaces\IAttributesService.cs" />
+    <Compile Include="Interfaces\IAttributeValuesService.cs" />
+    <Compile Include="Interfaces\ICategoriesService.cs" />
     <Compile Include="Interfaces\IMainCategoriesRepo.cs" />
     <Compile Include="Interfaces\IProductAttributesRepo.cs" />
     <Compile Include="Interfaces\IProductsRepo.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Interfaces\IUsersRepo.cs" />
     <Compile Include="Models\AttributesDTO.cs" />
     <Compile Include="Models\Attribute_ValuesDTO.cs" />
