--- a/Marketplace_OA/Marketplace_OA.csproj
+++ b/Marketplace_OA/Marketplace_OA.csproj
@@ -137,7 +137,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AttributesVM.cs" />
+    <Compile Include="Models\Attribute_ValuesVM.cs" />
+    <Compile Include="Models\CategoriesVM.cs" />
+    <Compile Include="Models\MainCategoriesVM.cs" />
     <Compile Include="Models\ProductAttributesVM.cs" />
+    <Compile Include="Models\ProductsVM.cs" />
+    <Compile Include="Models\Product_AttributesVM.cs" />
+    <Compile Include="Models\UsersVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -196,6 +203,10 @@
     <Content Include="Views\Product\ProductList.cshtml" />
     <Content Include="Views\Shared\_SearchLayout.cshtml" />
     <Content Include="Views\Product\ProductDetail.cshtml" />
+    <Content Include="Views\Home\GetSubCategories.cshtml" />
+    <Content Include="Views\Home\GetProducts.cshtml" />
+    <Content Include="Views\Home\GetProductsById.cshtml" />
+    <Content Include="Views\Home\MainCategories.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -229,6 +240,10 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DomainLayer\DomainLayer.csproj">
+      <Project>{E29AE642-3347-4A9A-8446-574BB15FFBDA}</Project>
+      <Name>DomainLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ServiceLayer\ServiceLayer.csproj">
       <Project>{1e478418-28fe-45fd-995e-86992da47cd9}</Project>
       <Name>ServiceLayer</Name>
