--- a/DomainLayer/DomainLayer.csproj
+++ b/DomainLayer/DomainLayer.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Interfaces\IGenericRepo.cs" />
     <Compile Include="Interfaces\IMainCategoriesRepo.cs" />
     <Compile Include="Interfaces\IProductAttributesRepo.cs" />
+    <Compile Include="Interfaces\IProductsAttributesRepo2.cs" />
     <Compile Include="Interfaces\IProductsRepo.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Interfaces\IUsersRepo.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="Models\Attribute_Values.cs" />
     <Compile Include="Models\Categories.cs" />
     <Compile Include="Models\MainCategories.cs" />
+    <Compile Include="Models\ProductAttributeDetail.cs" />
     <Compile Include="Models\Products.cs" />
     <Compile Include="Models\Product_Attributes.cs" />
     <Compile Include="Models\Users.cs" />
