--- a/Marketplace_OA/Web.config
+++ b/Marketplace_OA/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add name="MarketDBContext" connectionString="Data Source=DESKTOP-4DH234D\SQLEXPRESS;Initial Catalog=OATestDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add name="MarketDBContext" connectionString="Data Source=DESKTOP-4DH234D\SQLEXPRESS;Initial Catalog=OATestDBTwo;Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
