--- a/RepositoryLayer/RepositoryLayer.csproj
+++ b/RepositoryLayer/RepositoryLayer.csproj
@@ -52,18 +52,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MarketDBcontext.cs" />
-    <Compile Include="Migrations\202308090045317_InitialCreate.cs" />
-    <Compile Include="Migrations\202308090045317_InitialCreate.designer.cs">
-      <DependentUpon>202308090045317_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\202308110327102_InitialCreate.cs" />
+    <Compile Include="Migrations\202308110327102_InitialCreate.designer.cs">
+      <DependentUpon>202308110327102_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AttributeRepo.cs" />
     <Compile Include="Repositories\AttributesValueRepo.cs" />
     <Compile Include="Repositories\CategoriesRepo.cs" />
+    <Compile Include="Repositories\Filters.cs" />
     <Compile Include="Repositories\GenericRepo.cs" />
     <Compile Include="Repositories\MainCategoriesRepo.cs" />
     <Compile Include="Repositories\ProductAttributesRepo.cs" />
+    <Compile Include="Repositories\ProductAttributesRepo2.cs" />
     <Compile Include="Repositories\ProductsRepo.cs" />
     <Compile Include="Repositories\UnitOfWork.cs" />
     <Compile Include="Repositories\UsersRepo.cs" />
@@ -80,8 +82,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202308090045317_InitialCreate.resx">
-      <DependentUpon>202308090045317_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202308110327102_InitialCreate.resx">
+      <DependentUpon>202308110327102_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
